<resources>
    <string name="app_name">Planowanie</string>
    <string name="player_name_and_points">%d | %s</string>
    <string name="player_planned_and_taken">%s / %s</string>
    <string name="gameActivityTitle">Gra %d</string>
    <string name="player3Hint">Gracz 3</string>
    <string name="player1Hint">Gracz 1</string>
    <string name="playersCountText">Liczba graczy:</string>
    <string name="twoPlayersRadio">2 graczy</string>
    <string name="fourPlayersRadio">4 graczy</string>
    <string name="singleGameRadio">gra pojedyńcza</string>
    <string name="quadraGameRadio">gra poczwórna</string>
    <string name="player2Hint">Gracz 2</string>
    <string name="playersNamesText">Nazwy graczy:</string>
    <string name="player4Hint">Gracz 4</string>
    <string name="gameTypeText">Typ gry:</string>
    <string name="playButtonText">Graj</string>
    <string name="game1">Gra 1</string>
    <string name="game2">Gra 2</string>
    <string name="game3">Gra 3</string>
    <string name="game4">Gra 4</string>
    <string name="exit_to_menu">Wyjdź do menu</string>
    <string name="previousRound">Poprzednia runda</string>
    <string name="nextRound">Następna runda</string>
    <string name="togglePlayer">Przełącz gracza</string>
    <string name="deleteAction">Kasuj gracza</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_1_13">1 (13)</string>
    <string name="_2_12">2 (12)</string>
    <string name="_3_11">3 (11)</string>
    <string name="_4_10">4 (10)</string>
    <string name="_5_9">5 (9)</string>
    <string name="_6_8">6 (8)</string>
    <string name="_7_7">7 (7)</string>
    <string name="_8_6">8 (6)</string>
    <string name="_9_5">9 (5)</string>
    <string name="_10_4">10 (4)</string>
    <string name="_11_3">11 (3)</string>
    <string name="_12_2">12 (2)</string>
    <string name="_13_1">13 (1)</string>
    <string name="_14_1">14 (1)</string>
    <string name="_15_1">15 (1)</string>
    <string name="_16_1">16 (1)</string>
    <string name="atut">Atut</string>
    <string name="_2">2</string>
    <string name="summary">Podsumowanie</string>
    <string name="endGame">Zakończ grę</string>
    <string name="stats">Statystyki</string>
    <string name="continue_previous_game">Kontynuuj poprzednią grę</string>
    <string name="no_saved_game">Brak zapisanej gry.</string>
    <string name="start_new_game">Rozpocznij nową grę</string>
    <string name="list_of_registered_players">Lista zarejestrowanych graczy</string>
    <string name="game_stats">Statystyki gier</string>
    <string name="game_history">Historia gier</string>
    <string name="error_connecting_to_database">Błąd połączenia z bazą danych</string>
    <string name="loading_from_database">Wczytywanie z bazy danych...</string>
    <string name="input_all_player_names">Podaj nazwy wszystkich graczy!</string>
    <string name="do_you_really_want_to_overwrite_game">Czy na pewno chcesz nadpisać grę?</string>
    <string name="overwritting_confirmation_text">Na tym urządzeniu zapisana jest niezakończona gra. Czy napewno chcesz ją nadpisać?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="saved_match_description">%s-%s-%s %s:%s - %s %s %s %s</string>
    <string name="incompleted_round">Runda w toku</string>
    <string name="press_again_to_exit">Naciśnij ponownie, aby zamknąć aplikację</string>
    <string name="game_not_started">Gra się jeszcze nie rozpoczęła</string>
    <string name="back_to_game">Wróć do gry</string>
    <string name="next_game">Następna gra</string>
    <string name="end_match">Zakończ mecz</string>
    <string name="points_label">Punkty</string>
    <string name="planned_good_label">Planowanie</string>
</resources>