<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basicactivity.MainActivity">
    <item
        android:id="@+id/gameMenuGame1"
        android:orderInCategory="100"
        android:title="@string/game1"
        app:showAsAction="never" />
    <item
        android:id="@+id/gameMenuGame2"
        android:orderInCategory="100"
        android:title="@string/game2"
        app:showAsAction="never" />
    <item
        android:id="@+id/gameMenuGame3"
        android:orderInCategory="100"
        android:title="@string/game3"
        app:showAsAction="never" />
    <item
        android:id="@+id/gameMenuGame4"
        android:orderInCategory="100"
        android:title="@string/game4"
        app:showAsAction="never" />
    <item
        android:id="@+id/gameMenuExit"
        android:orderInCategory="100"
        android:title="@string/exit_game"
        app:showAsAction="never" />
</menu>